[package]
name = "blink-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# for the cortex microcontroller
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
# board support crate
rp-pico = "0.7"
# for GPIO traits
embedded-hal = "0.2.7"
# to handle panics
panic-halt = "0.2"

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false